[package]
name = "skyblock_auction_fetcher"
version = "0.9.0"
edition = "2021"


[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
chrono = "0.4.19"
serde_json = "1.0.59"
rusqlite = "0.27.0"
futures = "0.3.21"


[profile.release]
opt-level = 3
debug = 0
#strip = true
lto = "thin"
panic = "abort"
